--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "escodegen": "^1.7.0",
     "loader-utils": "^0.2.13",
     "lodash": "^4.6.1",
+    "recompose": "0.19.0",
     "xml-parser": "^1.2.1"
   },
   "peerDependencies": {
