--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "peerDependencies": {
     "react": ">=0.14.0",
     "object-assign": ">=4.0.0",
-    "recompose": ">=0.16.0"
+    "recompose": "0.19.0"
   },
   "devDependencies": {
     "glob": "^7.0.3",
@@ -33,7 +33,7 @@
     "object-assign": ">=4.0.0",
     "react": ">=0.14.0",
     "react-dom": ">=0.14.0",
-    "recompose": ">=0.16.0",
+    "recompose": "0.19.0",
     "svgo": "^0.6.4"
   },
   "keywords": [
